--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,8 @@
 <div class="container">
-  
+  <div class="row">
+    <div class="col-md-12 text-center">
+<app-counter></app-counter>
+
+    </div>
+  </div>
 </div>
