--- a/src/app/counter/counter-button.component/counter-button.component.html
+++ b/src/app/counter/counter-button.component/counter-button.component.html
@@ -1,1 +1,5 @@
-<p>counter-button.component works!</p>
+<div>
+  <button class ="btn btn-primary" (click)="onIncrement()">Increment</button>
+  <button class="btn btn-warning" (click)="onDecrement()">Decrement</button>
+    <button class="btn btn-info" (click)="onReset()">Reset</button>
+</div>
