--- a/src/app/counter/counter.component/counter.component.html
+++ b/src/app/counter/counter.component/counter.component.html
@@ -1,15 +1,11 @@
 <div class="row">
   <div class="col-md-12">
     <div class="my-3">
-      <app-counter-output [counter]="counter"></app-counter-output>
+      <app-counter-output ></app-counter-output>
 
     </div>
     <div class="my-3">
-      <app-counter-button   (increment)="onIncrement()"
-      (decrement)="onDecrement()"
-      (reset)="onReset()"
-      
-      ></app-counter-button>
+      <app-counter-button  ></app-counter-button>
     </div>
   </div>
 </div>
