pass costum data using props in Action and update state

--- a/src/app/counter/counter.component/counter.component.html
+++ b/src/app/counter/counter.component/counter.component.html
@@ -6,6 +6,10 @@
     </div>
     <div class="my-3">
       <app-counter-button  ></app-counter-button>
+
+    </div>
+    <div class="my-3">
+      <app-costum-counter-input></app-costum-counter-input>
     </div>
   </div>
 </div>
