--- a/src/app/counter/costum-counter-input/costum-counter-input.html
+++ b/src/app/counter/costum-counter-input/costum-counter-input.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>{{channelName}}</h2>
+  <h2>{{channelName$ | async}}</h2>
   <input type="text" name="" id="" placeholder="enter number" [(ngModel)]="value">
   <button class="btn btn-primary" (click)="Add()">Add to counter</button>
   <button (click)="onChangeText()">changeText</button>
